After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 563163 - The Stop button doesn't stop the search
The Stop button doesn't stop the search
Status: VERIFIED FIXED
Product: nautilus
Classification: Core
Component: File Search Interface
3.1.x
Other All
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on: 654558
Blocks:
 
 
Reported: 2008-12-03 21:12 UTC by Jean-Philippe Fleury
Modified: 2011-10-05 09:01 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2



Description Jean-Philippe Fleury 2008-12-03 21:12:50 UTC
Please describe the problem:
The Stop button doesn't have any effect.

Steps to reproduce:
1. On Nautilus, go for example to /
2. Click on the Search button, and type for example aspell. The search starts.
3. Click on the Stop button.

Actual results:
There's no effect. The search still is running.

Expected results:
The search should stop.

Does this happen every time?
Yes.

Other information:
Comment 1 Stefano Teso 2011-03-08 12:57:42 UTC
Thanks for your bug report. Does this still happen with a newer version of nautilus, like 2.32 or 2.91? Are you using tracker or the simple search engine
Comment 2 Jean-Philippe Fleury 2011-03-08 14:07:43 UTC
Yes, I still have this bug with Nautilus 2.32.0. I use the simple search engine. I don't use tracker.
Comment 3 André Klapper 2011-08-11 18:40:01 UTC
In 3.1.4, when trying to click the Stop button of the small "Searching..." widget at the bottom of the screen, the widget moves to the other side immediately when I mouse over.
Comment 4 André Klapper 2011-08-11 19:43:24 UTC
(In reply to comment #3)
> the widget moves to the other side

Adding dependency to bug 654558.
Comment 5 Cosimo Cecchi 2011-09-08 20:37:27 UTC
I pushed a fix for this to git master now, closing as FIXED.
Comment 6 André Klapper 2011-10-05 09:01:47 UTC
Verified in Nautilus 3.2.0 on Ubuntu 11.10beta