search-directory: stop the engine when there are no active monitors

My understanding of this code suggests the engine should be stopped as
soon as the active monitors reach zero.
This fixes the Stop button not working while searching anyway, and
doesn't seem to cause any collateral damage.

https://bugzilla.gnome.org/show_bug.cgi?id=563163